dev01 one commit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	console.log('哈哈，hello git')
 	console.log('哈哈，hello git2')
 	console.log('哈哈，hello git3')
+
+	console.log('hehe dev01 commit')
 </script>
 </body>
 </html>
