dev01 two commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	console.log('哈哈，hello git3')
 
 	console.log('hehe dev01 commit')
+	console.log('hehe dev01 commit2')
 </script>
 </body>
 </html>
