--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	console.log('哈哈，hello git3')
 
 	console.log('hehe dev01 commit')
+
+	console.log('master update commit')
 </script>
 </body>
 </html>
