--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 	console.log('master update commit')
 	console.log('hehe dev01 commit2')
+
+	console.log('commit remote res')
 </script>
 </body>
 </html>
