github write commit
直接在github更新提交

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	console.log('hehe dev01 commit2')
 
 	console.log('commit remote res')
+
+        console.log('解决冲突~~~')
 </script>
 </body>
 </html>
