--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	console.log('hehe dev01 commit2')
 
 	console.log('commit remote res')
+
+
+	console.log('哈哈，要解决冲突问题')
 </script>
 </body>
 </html>
