--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	console.log('哈哈，要解决冲突问题')
 
         console.log('解决冲突~~~')
+	
+	console.log('远程库版本 比本地更高！本地库提交就会有冲突！此时需要在本地先pull~~~')
 </script>
 </body>
 </html>
